--- a/css/mainStyles.css
+++ b/css/mainStyles.css
@@ -16,7 +16,7 @@ body {
     border: 1px solid rgb(204, 204, 204);
 }
 
-.blankForTest {
+.blankTester {
     height: 500px;
     border: 1px solid black;
 }
@@ -49,12 +49,14 @@ nav {
 }
 
 nav a {
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
     font-size: 1.2em;
     font-weight: bold;
-    padding: 5px;
-    margin: 0px 5px;
+    padding: 5px 10px;
+    margin: 0px 10px;
     text-decoration: none;
+    transition: background-color 0.3s ease;
 }
 /* 
 nav a:last-child {
@@ -62,12 +64,14 @@ nav a:last-child {
 } */
 
 nav a:hover {
-    color: rgb(255, 110, 200);
+    color: white;
+    background-color: rgb(255, 62, 181);
     text-decoration: none;
 }
 
 nav a.active {
-    color: rgb(255, 62, 181);
+    color: rgb(255, 255, 255);
+    background-color: rgb(255,62,181);
 }
 
 .mainBodyContainer {
